introduce PricingApiClient